Thu Dec 19 23:10:37 GMT 2013  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: Tweak conditionals around $XAPIAN_PREFER_BRASS
	  check.

Thu Dec 19 23:09:30 GMT 2013  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/dbfactory.cc,docs/deprecation.rst,
	  docs/overview.rst,include/xapian/constants.h,
	  include/xapian/dbfactory.h,tests/api_backend.cc,tests/api_db.cc:
	  Add Xapian::DB_BACKEND_STUB and deprecate Xapian::Auto::open_stub().

Thu Dec 19 06:46:15 GMT 2013  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Update example version to a more recent one.

Thu Dec 19 04:01:31 GMT 2013  Olly Betts <olly@survex.com>

	* docs/deprecation.rst,include/xapian/dbfactory.h,tests/api_db.cc,
	  tests/harness/: Deprecate Xapian::Brass::open() and
	  Xapian::Chert::open() in favour of the new Xapian::DB_BACKEND_BRASS
	  and Xapian::DB_BACKEND_CHERT flags.

Thu Dec 19 01:17:02 GMT 2013  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/brass/,backends/chert/chert_database.cc,
	  backends/chert/chert_database.h,backends/database.h,
	  backends/dbcheck.cc,backends/dbfactory.cc,include/xapian/constants.h,
	  include/xapian/database.h,include/xapian/dbfactory.h: Add flags
	  which can be bitwise OR-ed into the second argument when opening a
	  writable datase: DB_NO_SYNC (to disable use of fsync, etc) and
	  DB_DANGEROUS (to enable in-place updates).  WritableDatabase
	  can now be constructed from just a filename (defaulting to opening
	  the database with DB_CREATE_OR_OPEN).

Thu Dec 19 00:11:26 GMT 2013  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_multi.cc: Fix comment typo.

Wed Dec 18 23:52:49 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc,
	  tests/api_backend.cc: Fix handling of invalid block sizes - the
	  size gets fixed as documented, but the uncorrected size was passed
	  to the base file.  Also, abort() was called on 0.
